--- a/src/style.css
+++ b/src/style.css
@@ -1,12 +1,4 @@
-.app-counter {
+.app-midi-board {
   width: 100%;
   height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.app-counter button {
-  font-size: 20px;
-  font-family: monospace;
 }
